@@ -126,7 +126,7 @@
         </pluginManagement>
 
         <plugins>
-            <!-- Build Helper Plugin - Add benchmark helper sources -->
+            <!-- Build Helper Plugin - Add benchmark helper sources (test scope) -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
@@ -136,7 +136,7 @@
                         <id>add-benchmark-helper-source</id>
                         <phase>generate-sources</phase>
                         <goals>
-                            <goal>add-source</goal>
+                            <goal>add-test-source</goal>
                         </goals>
                         <configuration>
                             <sources>
@@ -162,31 +162,6 @@
                         <exclude>**/TikaExtract.java</exclude>
                     </excludes>
                 </configuration>
-                <executions>
-                    <!-- Compile benchmark helper script -->
-                    <execution>
-                        <id>compile-benchmark-helper</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                        <configuration>
-                            <compileSourceRoots>
-                                <compileSourceRoot>${project.basedir}/../../tools/benchmark-harness/scripts</compileSourceRoot>
-                            </compileSourceRoots>
-                            <includes>
-                                <include>KreuzbergExtractJava.java</include>
-                            </includes>
-                            <outputDirectory>${project.build.directory}/classes</outputDirectory>
-                            <classpathElements>
-                                <classpathElement>${project.build.outputDirectory}</classpathElement>
-                            </classpathElements>
-                            <compilerArgs>
-                                <arg>--enable-preview</arg>
-                            </compilerArgs>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
 
             <!-- Maven Enforcer Plugin to enforce Maven version -->
